# codefest22-vtk-demo

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/python_helper/: gen_data.py
cpp/res/: 12265_Fish_v1_L2.mtl  13007_Blue-Green_Reef_Chromis_v2_l3.mtl  AppIcon.icns  fish.mtl
cpp/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
js/: vtkjs.css  vtkjs.html  vtkjs.js
python/: philly_data.csv  pydemo.ui  pythondemo.py  vague_outline.csv
